create sass files and add design and images folders, modified gitignore and index

--- a/vite_interactive-rating-component-main/src/styles/main.scss
+++ b/vite_interactive-rating-component-main/src/styles/main.scss
@@ -1,3 +1,150 @@
+@import 'mixins';
+@import 'variables';
+@import 'fonts';
+@import 'resets';
+
 body {
-	background: red;
+	@include grid;
+	min-height: 100vh;
+}
+
+// Rating section
+
+.sect {
+	@include radius(25px);
+	width: 22rem;
+	height: 22.5rem;
+	background: $dark-blue;
+	padding: 25px;
+}
+
+#rating-sect {
+	display: none;
+}
+
+.icon-container {
+	@include row;
+	justify-content: center;
+	align-items: center;
+	@include radius(50%);
+	width: 40px;
+	height: 40px;
+	background: $dark-blue-opacity;
+}
+
+.icon {
+	width: 35%;
+}
+
+.title {
+	font-size: 1.47rem;
+}
+
+.question {
+	@include line-height(1.3rem);
+	font-size: 12px;
+	color: $light-grey;
+}
+
+form {
+	@include column;
+	align-items: start;
+}
+
+form > * {
+	margin-bottom: 1.5rem;
+}
+
+.rating-container {
+	@include row;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.rating {
+	@include weight(600);
+	@include radius(50%);
+	background: $dark-blue-opacity;
+	color: $light-grey;
+	width: 40px;
+	height: 40px;
+	cursor: pointer;
+}
+
+#submit-btn {
+	@include button($very-dark-blue, $orange, 0.8rem, 0.6rem);
+	@include radius(1.4rem);
+	@include weight(600);
+	@include letter-spacing(1px);
+	width: 100%;
+	text-transform: uppercase;
+	cursor: pointer;
+}
+
+#submit-btn:hover,
+.rating:hover {
+	background: $white;
+}
+
+.rating:active {
+	color: $very-dark-blue;
+	background-color: $orange;
+}
+
+// Thank section _____________________________________________________
+#thank-sect {
+	@include column;
+	justify-content: space-between;
+	align-items: center;
+	padding-block: 2.5rem;
+}
+
+.icon-rating-container {
+	width: fit-content;
+	max-width: 9rem;
+
+	img {
+		width: 100%;
+	}
+}
+
+.rated {
+	@include button($orange, $dark-blue-opacity, 0.8rem, 0.4rem);
+	@include radius(20px);
+	width: 60%;
+}
+
+.thank-title {
+	font-size: 1.5rem;
+}
+
+.agreements {
+	@include line-height(20px);
+	text-align: center;
+	color: $light-grey;
+	font-size: 0.82rem;
+}
+
+// Footer
+.attribution {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	@include row;
+	justify-content: center;
+	gap: 1rem;
+	width: 100%;
+	padding: 20px;
+
+	a {
+		font: {
+			family: $font-primary;
+			weight: 500;
+		}
+		color: $orange;
+	}
+}
+
+a:hover {
+	text-decoration: underline;
 }
